--- a/html/contact.html
+++ b/html/contact.html
@@ -16,6 +16,7 @@
             font-family: Arial, sans-serif;
         }
         /*abhiram sexy*/
+        
                 header {
             text-align: center;
             padding: 20px;
@@ -81,6 +82,7 @@
             <p>Email: contact@cinesurf.com</p>
             <p>Phone: +1 (123) 456-7890</p>
             <p>Address: 123 Movie Street, Cityville, Country</p>
+            <h1>Abhiram is racist</h1>
            
         </div>
     </div>
