--- a/html/home1.html
+++ b/html/home1.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CineSurf-Home</title>
-    <link rel="stylesheet" href="./styles/home.css" />
+    <link rel="stylesheet" href="../styles/home.css" />
     <link rel="icon" href="logo2.jpg" type="image/x-icon">
     
 </head>
@@ -23,14 +23,14 @@
     <table>
         <tr>
             <td class="movie-details">
-                    <img src="./images/avatar.jpg" alt="Movie 1">
+                    <img src="../images/avatar.jpg" alt="Movie 1">
                 <h2>Avatar</h2>
                 <p>Director: James Cameron</p>
                 <p>Release Date: 2009</p>
             </td>
 
             <td class="movie-details">
-                    <img src="./images/titanic.jpeg" alt="Movie 1">
+                    <img src="../images/titanic.jpeg" alt="Movie 1">
                 <h2>Titanic</h2>
                 <p>Director: James Cameron</p>
                 <p>Release Date: 1997</p>
