--- a/html/index.html
+++ b/html/index.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CineSurf - Home</title>
-    <link rel="stylesheet" href="./styles/index.css">
+    <link rel="stylesheet" href="../styles/index.css">
 </head>
 <body>
     <header>
@@ -14,8 +14,8 @@
     </header>
 
     <nav>
-        <a href="contact.html">Contact</a>
-        <a href="home.html" class="login-button">Continue as Guest</a>
+        <a href="../html/contact.html">Contact</a>
+        <a href="../html/home.html" class="login-button">Continue as Guest</a>
         
     </nav>
     
