--- a/html/contact.html
+++ b/html/contact.html
@@ -71,7 +71,7 @@
         <nav>
             <a href="home.html">Home</a>
         </nav>
-        <img class ="logo" src="./logo.jpg" alt="Logo" />
+        <img class ="logo" src="../images/logo.jpg" alt="Logo" />
     </header>
 
    
